<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="christophershae.budgettracker.ManualInputActivity">

    <EditText
        android:id="@+id/itemName"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Enter Item"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="31dp"
        app:layout_constraintRight_toLeftOf="@+id/itemPrice"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.714" />

    <Button
        android:id="@+id/addItemToBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="59dp" />

    <Button
        android:id="@+id/finishAddingItemsToBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Finish"
        android:text="@string/finish"
        app:layout_constraintLeft_toRightOf="@+id/addItemToBudget"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintBaseline_toBaselineOf="@+id/addItemToBudget"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/itemPrice"
        android:layout_width="119dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zero_dollars"
        android:textAlignment="center"
        android:layout_marginRight="41dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="54dp"
        tools:layout_editor_absoluteY="31dp" />

    <Spinner
        android:id="@+id/Menu_C"
        android:layout_width="287dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/text_editlist"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/Edit_List"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:text="@string/Edit_List"
        app:layout_constraintLeft_toRightOf="@+id/text_editlist"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Menu_C" />

    <EditText
        android:id="@+id/text_editlist"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Create Category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <ListView
        android:id="@+id/itemsAddedToBudgetAlready"
        android:layout_width="288dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="252dp" />
</android.support.constraint.ConstraintLayout>
